--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,30 @@ dependencies {
     implementation('org.hibernate:hibernate-core:6.0.2.Final')
     implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')
 
+    //for client
+    implementation('org.glassfish.jersey.core:jersey-client:3.1.3')
+    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.3'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.3'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.3'
+    implementation 'org.jboss.weld.servlet:weld-servlet-core:4.0.1.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    implementation 'org.hibernate:hibernate-core:6.3.1.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
+    implementation 'org.hibernate:hibernate-validator:8.0.1.Final'
+
+    //for mariadb driver
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
+    //for logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+    //for convert type in rest
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    implementation 'joda-time:joda-time:2.12.5'
+
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
